Fix age z-index to appear correctly on device ports page

--- a/Netdisco/share/views/plugin/age/age.css
+++ b/Netdisco/share/views/plugin/age/age.css
@@ -7,6 +7,7 @@
   background-color: #FFC;
   border: 3px solid #FF0;
   border-radius: 4px 4px 4px 4px;
+  z-index: 2000;
 }
 
 .nd_old-info-warning:hover {
